force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendee</label>
    <nameField>
        <displayFormat>AN-{000000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>