force-app/main/default/objects/Attendance__c/fields/I_RS_Committee_Membership__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Committee_Membership__c</fullName>
    <label>Committee Membership</label>
    <referenceTo>Committee_Membership__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>