force-app/main/default/objects/Attendance__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <formula>I_RS_Committee_Membership__r.I_RS_Contact__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>