force-app/main/default/objects/Attendance__c/fields/I_RS_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <referenceTo>Meeting_Date__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>