force-app/main/default/objects/Attendance__c/fields/I_RS_Membership_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Membership_Category__c</fullName>
    <formula>LEFT(
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category A (Veterinarian)&quot;), &quot;Category A (Veterinarian); &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category B (Current Research Experience)&quot;), &quot;Category B (Current Research Experience); &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category C (Animal Welfare)&quot;), &quot;Category C (Animal Welfare); &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category D (Lay person)&quot;), &quot;Category D (Lay person); &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Chair&quot;), &quot;Chair; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Current Research Experience&quot;), &quot;Current Research Experience; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Deputy Chair&quot;), &quot;Deputy Chair; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Ex-officio&quot;), &quot;Ex-officio; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Independent&quot;), &quot;Independent; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Lawyer&quot;), &quot;Lawyer; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Lay person&quot;), &quot;Lay person; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Pastoral Care&quot;), &quot;Pastoral Care; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Professional Care&quot;), &quot;Professional Care; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Subject Matter Expert&quot;), &quot;Subject Matter Expert; &quot;, &quot;&quot;),





LEN(
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category A (Veterinarian)&quot;), &quot;Category A (Veterinarian); &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category B (Current Research Experience)&quot;), &quot;Category B (Current Research Experience); &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category C (Animal Welfare)&quot;), &quot;Category C (Animal Welfare); &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Category D (Lay person)&quot;), &quot;Category D (Lay person); &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Chair&quot;), &quot;Chair; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Current Research Experience&quot;), &quot;Current Research Experience; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Deputy Chair&quot;), &quot;Deputy Chair; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Ex-officio&quot;), &quot;Ex-officio; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Independent&quot;), &quot;Independent; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Lawyer&quot;), &quot;Lawyer; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Lay person&quot;), &quot;Lay person; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Pastoral Care&quot;), &quot;Pastoral Care; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Professional Care&quot;), &quot;Professional Care; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(I_RS_Committee_Membership__r.I_RS_Membership_Category__c , &quot;Subject Matter Expert&quot;), &quot;Subject Matter Expert; &quot;, &quot;&quot;)
)

- 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Category</label>
    <type>Text</type>
</CustomField>