force-app/main/default/objects/Attendance__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>In Attendance</fullName>
            </value>
            <value>
                <fullName>Apology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>